--- a/knockout-fundamentals/Content/Site.css
+++ b/knockout-fundamentals/Content/Site.css
@@ -22,3 +22,27 @@ select,
 textarea {
     max-width: 280px;
 }
+
+a.tag-edit {
+  color: #6E6B65;
+  font-size: 10px;
+  text-decoration: none;
+  padding: 0 0 0 14px;
+  background-repeat: no-repeat;
+  background-image: url(images/edit.gif);
+  margin-left: 14px;
+}
+a.tag-edit:hover {
+  color: #333333;
+}
+a.tag-delete {
+  color: #6E6B65;
+  font-size: 10px;
+  text-decoration: none;
+  padding: 0 0 0 14px;
+  background-repeat: no-repeat;
+  background-image: url(images/del.gif);
+}
+a.tag-delete:hover {
+  color: #333333;
+}
