--- a/knockout-fundamentals/Views/Home/Index.cshtml
+++ b/knockout-fundamentals/Views/Home/Index.cshtml
@@ -5,18 +5,15 @@
   <div class="box-content">
     <input type="text" placeholder="Add New Tag" data-bind="value: tagToAdd, valueUpdate: 'afterkeydown', executeOnEnter: addTag" />
     <button data-bind="click: addTag, enable: tagToAdd().length > 0">+ Add</button>
-    <ul data-bind="template: { name: 'tagsTempl', foreach: tags }">
-    </ul>
-  </div>
-</div>
-<script id="tagsTempl" type="text/html">
- 
-  <li class="tagItem">
-    <span data-bind="text: Name + ' ' + (new Date).toLocaleTimeString()"></span>
+    <ul data-bind="foreach: tags">
+      <li class="tagItem">
+        <span data-bind="text: Name + ' ' + (new Date).toLocaleTimeString()"></span>
         <div>
           <a href="#" class="tag-edit">Edit</a>
           <a href="#" class="tag-delete">Delete</a>
         </div>
       </li>
-</script>
+    </ul>
+  </div>
+</div>
 <script src="@Url.Content("~/Scripts/bp-index.js")" type="text/javascript"></script>
