--- a/knockout-fundamentals/Views/Home/Index.cshtml
+++ b/knockout-fundamentals/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <input type="text" placeholder="Add New Tag" data-bind="value: tagToAdd, valueUpdate: 'afterkeydown', executeOnEnter: addTag" />
     <button data-bind="click: addTag, enable: tagToAdd().length > 0">+ Add</button>
     <ul data-bind="foreach: tags">
-      <li class="tagItem">
-        <span data-bind="text: Name + ' ' + (new Date).toLocaleTimeString()"></span>
+      <li class="tagItem" data-bind="click: $parent.selectTag">
+        <span data-bind="text: Name"></span>
         <div>
           <a href="#" class="tag-edit">Edit</a>
           <a href="#" class="tag-delete">Delete</a>
@@ -15,5 +15,9 @@
       </li>
     </ul>
   </div>
+</div>
+<div id="tagDialog" data-bind="with: selectedTag">
+    Tag Name:
+    <input type="text" data-bind="value: Name" />
 </div>
 <script src="@Url.Content("~/Scripts/bp-index.js")" type="text/javascript"></script>
